# codex-multi-dev-smoke-20260325-185036

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  styles.css
scripts/: deploy.sh
src/: smoke.txt
src/snack_store/: __init__.py  app.py  catalog.py  schemas.py
tests/: smoke_test.py  test_api.py
